# libNmeaParser

./: .cproject  .gitignore  .gitlab-ci.yml  .project  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  Version.h.in
include/: NmeaEnums.h  NmeaParser.h  NmeaSentences.h
src/: NmeaEnums.cpp  NmeaParser.cpp  NmeaParser.h  NmeaSentences.cpp  NmeaSentences.h
test/: test.cpp
